# john

./: CMakeLists.txt  actor.cpp  actor.hpp  camera.cpp  camera.hpp  color.hpp  console.cpp  console.hpp  engine.cpp  engine.hpp  glyph.cpp  glyph.hpp  item.cpp  item.hpp  john-linux.cbp  john.cbp  john.depend  john.layout  main.cpp  map.cpp  map.hpp  tools.cpp  tools.hpp  worldobject.cpp  worldobject.hpp
data/: actors.xml  items.xml  tiles.xml
docs/: build.txt  curses.txt
include/: actor.hpp  attribute.hpp  camera.hpp  color.hpp  console.hpp  engine.hpp  glyph.hpp  item.hpp  map.hpp  tools.hpp  worldobject.hpp
src/: CMakeLists.txt  actor.cpp  camera.cpp  color.cpp  console.cpp  engine.cpp  glyph.cpp  item.cpp  main.cpp  map.cpp  tools.cpp  worldobject.cpp
